--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 2013-10-07  Niibe Yutaka  <gniibe@fsij.org>
 
-	* polarssl/library/bignum.c (mpi_montmul): Minimum zero-ing of D.
+	* polarssl/library/bignum.c (mpi_sub_hlp): Return CARRY.
+	(mpi_sub_abs): Carry propagatoin is done here.
+	(mpi_mul_hlp_mm): Remove.
+	(mpi_mul_hlp): Return CARRY, computation in constant time.
+	(mpi_mul_mpi): Change the order of computation not to propagate
+	carry.
+	(mpi_montmul): Minimum zero-ing of D and reduce usage of temporary
+	memory, by one word.  Use carry of mpi_mul_hlp.  Use
+	NEED_SUBTRACTION against timing attack.
+	(mpi_exp_mod): Minimum usage of temporary memory.
 
 2013-10-06  Niibe Yutaka  <gniibe@fsij.org>
 
