--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* src/openpgp.c (modify_binary): Allow odd size of certificate.
 
+	* polarssl/library/rsa.c: Update from PolarSSL 1.2.10.
+	* polarssl/include/polarssl/rsa.h: Ditto.
+
 2013-10-07  Niibe Yutaka  <gniibe@fsij.org>
 
 	* polarssl/library/bignum.c (mpi_sub_hlp): Return CARRY.
@@ -25,7 +28,7 @@
 
 2013-10-05  Niibe Yutaka  <gniibe@fsij.org>
 
-	* polarssl/include/polarssl/aes.h: Updated from PolarSSL 1.2.9.
+	* polarssl/include/polarssl/aes.h: Update from PolarSSL 1.2.9.
 	* polarssl/include/polarssl/bignum.h: Ditto.
 	* polarssl/include/polarssl/config.h: Ditto.
 	* polarssl/include/polarssl/rsa.h: Ditto.
