--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-11-03  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx: Update to 0.01.
+	* src/pin-cir.c: Chatter fix to 200ms.
+	* src/main.c: Fix bDeviceState.
+
 2013-11-02  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/usb_lld.h, src/usb_stm32f103.c (std_get_descriptor): Change
