--- a/NEWS
+++ b/NEWS
@@ -4,9 +4,12 @@ Gnuk NEWS - User visible changes
 
   Released 2013-12-25, by NIIBE Yutaka
 
+** Tools and test suite now work with PyUSB 1.0, too.
+It only worked with PyUSB 0.4.3, but it works with PyUSB 1.0 too.
+
 ** Improved RSA routine
-Working memory for RSA computation is taken from stack (mostly),
-instead of malloc.
+Working memory for RSA computation is taken from stack instead of
+malloc (mostly).
 
 
 * Major changes in Gnuk 1.1.0
