Fix for constant time (step 7)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2014-01-22  Niibe Yutaka  <gniibe@fsij.org>
 
-	* src/mod.c (mod_inv): FIx for constant time.
+	* src/bn.c (bn256_sqr): Fix for constant time.
+
+	* src/mod.c (mod_inv): Fix for constant time.
 
 	* src/ec_p256.c (compute_kG): Simplify.
 
